[Backend] user service 추가, team contentsform 수정